--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -162,7 +162,8 @@ p {
   -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  text-align: center; }
+  text-align: center;
+  margin: 0 15px; }
 
 .card-back {
   max-width: 165px;
@@ -172,7 +173,8 @@ p {
   -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  text-align: center; }
+  text-align: center;
+  margin: 0 20px; }
 
 .imageContainer {
   border-radius: 50%;
@@ -188,18 +190,23 @@ p {
   content: 'STATS: '; }
 
 .pokemon-type {
-  font-size: 0.6em; }
+  width: 24px;
+  height: 24px;
+  margin-top: -4px;
+  margin-right: -8px; }
 
 .pokemon-id {
   color: darkgreen;
   font-size: 15px; }
 
 .pokemon-type-id {
-  display: flex;
   flex-direction: row;
-  align-items: baseline;
+  margin-top: 10px;
+  display: flex;
   justify-content: space-between;
-  margin-top: 10px; }
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-wrap: nowrap; }
 
 /* ----------------------------------------- */
 /* CARD-REVERSE */
@@ -221,10 +228,10 @@ p {
 /* BATTLEFIELD */
 /* ------------------------------------------*/
 .battlefield {
-  background-image: url("../../assets/img/battlefield.jpg");
+  background-image: url("../../assets/img/pokemon/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 1067px;
+  height: 907px;
   width: 880px;
   margin: 0 auto; }
 
@@ -232,10 +239,10 @@ p {
 /* TAMAÑO DIVS */
 /* ------------------------------------------*/
 .computer-field {
-  height: 355px; }
+  height: 302px; }
 
 .battle-cards {
-  height: 355px; }
+  height: 302px; }
 
 .user-field {
-  height: 355px; }
+  height: 302px; }
