--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -22,49 +22,49 @@
 /* FORMULARIO */
 /* ------------------------------------------*/
 .login-box {
-  width        : 320px;
-  height       : 250px;
-  margin       : 0 auto;
-  padding      : 20px;
+  width: 320px;
+  height: 250px;
+  margin: 0 auto;
+  padding: 20px;
   border-radius: 20px;
-  background   : $bg-red-secondary;
-  color        : $text-primary1;
-  font-family  : "Turret Road", cursive;
+  background: $bg-red-secondary;
+  color: $text-primary1;
+  font-family: "Turret Road", cursive;
 }
 
 .login-title {
-  display       : block;
-  margin        : 10px 0 20px 0;
-  color         : $text-secondary;
-  text-align    : center;
+  display: block;
+  margin: 10px 0 20px 0;
+  color: $text-secondary;
+  text-align: center;
   text-transform: capitalize;
 }
 
 .input-field {
-  box-sizing   : border-box;
-  width        : 100%;
-  height       : 40px;
-  margin       : 0 0 20px 0;
-  border       : none;
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
+  margin: 0 0 20px 0;
+  border: none;
   border-bottom: 1px solid #cfd8dc;
-  outline      : none;
-  background   : none;
-  color        : #cfd8dc;
+  outline: none;
+  background: none;
+  color: #cfd8dc;
 }
 
 .btn-submit {
-  width         : 100%;
-  height        : 40px;
-  margin        : 20px 0;
-  border        : none;
-  border-radius : 20px;
-  outline       : none;
-  background    : $text-amarillo;
-  color         : $text-secondary;
-  font-size     : 17px;
-  font-weight   : bold;
+  width: 100%;
+  height: 40px;
+  margin: 20px 0;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  background: $text-amarillo;
+  color: $text-secondary;
+  font-size: 17px;
+  font-weight: bold;
   text-transform: capitalize;
-  cursor        : pointer;
+  cursor: pointer;
 }
 
 .btn-submit:hover {
@@ -73,17 +73,17 @@
 }
 
 .link-login {
-  display        : block;
-  margin         : 10px 0;
-  float          : right;
-  color          : #cfd8dc;
+  display: block;
+  margin: 10px 0;
+  float: right;
+  color: #cfd8dc;
   text-decoration: none;
-} 
+}
 
 .link-login:hover {
   margin-right: -7px;
-  color       : #ffa000;
-  transition  : 0.8s ease;
+  color: #ffa000;
+  transition: 0.8s ease;
 }
 
 /* ------------ ----------------------------- */
@@ -113,7 +113,7 @@
 // .user-card__img {
 //   align-self: center;
 //   background: rgb(21, 21, 53);
-// }
+// } 
 
 // .user-card__img img {
 //   border: 5px solid rgb(255, 166, 0);
@@ -123,146 +123,153 @@
 /* CARD22 */
 /* ------------------------------------------*/
 .carta_player {
-  width      : calc(159px);
-  height     : 220px;
-  height     : 220px;
-  background : radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
+  width: calc(159px);
+  height: 220px;
+  height: 220px;
+  background: radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
   font-family: "Turret Road", cursive;
   font-weight: 800;
 }
 
 .pokemon-name-hp {
-  display        : flex;
-  flex-direction : row;
-  align-items    : baseline;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
   justify-content: space-between;
-  margin-bottom  : 10px;
+  margin-bottom: 10px;
 }
 
 .pokemon-container {
-  display            : flex;
-  flex-wrap          : wrap;
-  align-items        : space-between;
-  justify-content    : center;
-  max-width          : 1200px;
-  margin             : 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space-between;
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
   -webkit-perspective: 100000;
-  perspective        : 100000;
+  perspective: 100000;
 }
 
 .pokemon-container .pokemon-card.flipped {
   -webkit-transform: rotatey(-180deg);
-  transform        : rotatey(-180deg);
+  transform: rotatey(-180deg);
 }
 
 .pokemon-container .pokemon-card {
-  width                  : 100%;
-  height                 : 100%;
-  transform-style        : preserve-3d;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
-  transition             : 0.5s;
-  -webkit-transition     : 0.35s;
+  transition: 0.5s;
+  -webkit-transition: 0.35s;
 }
 
 .pokemon-container .pokemon-card .face {
-  z-index                    : 2;
-  width                      : 100%;
-  height                     : 210px;
+  z-index: 2;
+  width: 100%;
+  height: 210px;
   -webkit-backface-visibility: hidden;
-  backface-visibility        : hidden;
+  backface-visibility: hidden;
 }
 
 .pokemon-container .pokemon-card .front {
   z-index: 1;
-  cursor : pointer;
+  cursor: pointer;
 }
 
 .pokemon-container .pokemon-card .back {
   -webkit-transform: rotatey(-180deg);
-  transform        : rotatey(-180deg);
-  cursor           : pointer;
+  transform: rotatey(-180deg);
+  cursor: pointer;
 }
 
 .back img {
   /* 	position:relative; */
   /* 	top: -20px; */
-  width  : 100%;
-  height : 240px;
-  margin : 0;
+  width: 100%;
+  height: 240px;
+  margin: 0;
   padding: 0;
 }
 
 .pokemon-card {
-  max-width         : 165px;
-  padding           : 15px 15px 0 15px;
-  border            : 8px solid #f9ee75;
-  border-radius     : 15px;
+  max-width: 165px;
+  padding: 15px 15px 0 15px;
+  border: 8px solid #f9ee75;
+  border-radius: 15px;
   -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow   : 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  box-shadow        : 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  text-align        : center;
+  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin: 0 15px;
 }
-  
+
 .card-back {
-  max-width         : 165px;
-  padding           : 15px 15px 0 15px;
-  border            : 8px solid #0f1b5d;
-  border-radius     : 15px;
+  max-width: 165px;
+  padding: 15px 15px 0 15px;
+  border: 8px solid #0f1b5d;
+  border-radius: 15px;
   -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow   : 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  box-shadow        : 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  text-align        : center;
+  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin: 0 20px;
 }
 
 .imageContainer {
-  border-radius   : 50%;
+  border-radius: 50%;
   background-color: beige;
 }
 
 .pokemon-hp {
-  color    : #c23b1f;
+  color: #c23b1f;
   font-size: 15px;
 }
 
 .pokemon-hp::before {
-  color    : #383838;
+  color: #383838;
   font-size: 10px;
-  content  : 'STATS: ';
+  content: 'STATS: ';
 }
 
 .pokemon-type {
-  font-size: 0.6em;
-}
-
+  width: 24px;
+  height: 24px;
+  margin-top: -4px;
+  margin-right: -8px;   
+}   
+ 
 .pokemon-id {
-  color    : darkgreen;
+  color: darkgreen;
   font-size: 15px;
 }
 
 .pokemon-type-id {
-  display        : flex;
-  flex-direction : row;
-  align-items    : baseline;
+  flex-direction: row;
+  margin-top: 10px;
+  display: flex;
   justify-content: space-between;
-  margin-top     : 10px;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-wrap: nowrap;
 }
 
 /* ----------------------------------------- */
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
- width       : 143px;
- height      : 204px;
- margin-right: 90px;
-}  
+  width: 143px;
+  height: 204px;
+  margin-right: 90px;
+}
 
 .reverse-card-img {
   max-width: 160px;
-  height   : 221px;
+  height: 221px;
 }
 
 .reverse-card-img img {
-  width : 143px;
+  width: 143px;
   height: 204px;
 }
 
@@ -270,10 +277,10 @@
 /* BATTLEFIELD */
 /* ------------------------------------------*/
 .battlefield {
-  background-image : url("../../assets/img/battlefield.jpg");
+  background-image: url("../../assets/img/pokemon/bg.jpg");
   background-repeat: no-repeat;
-  background-size  : cover;
-  height: 1067px;
+  background-size: cover;
+  height: 907px;
   width: 880px;
   margin: 0 auto;
 }
@@ -282,13 +289,13 @@
 /* TAMAÑO DIVS */
 /* ------------------------------------------*/
 .computer-field {
-  height: 355px;
+  height: 302px;
 }
 
 .battle-cards {
-  height: 355px;
+  height: 302px;
 }
 
 .user-field {
-  height: 355px;
+  height: 302px;
 }
