--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -203,26 +203,44 @@ h1 {
 
 .imageContainer {
   border-radius: 50%;
-  background-color: beige; }
+  background-color: beige;
+  border: 2px solid #f9ee75; }
 
 .pokemon-hp {
   color: #c23b1f;
-  font-size: 15px; }
+  font-size: 15px;
+  text-shadow: 1px 1px 1px #f9ee75; }
 
 .pokemon-hp::before {
-  color: #383838;
+  color: black;
+  text-shadow: 1px 1px 1px #f9ee75;
   font-size: 10px;
   content: "STATS: "; }
 
 .pokemon-type {
-  width: 24px;
-  height: 24px;
-  margin-top: -4px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 2px solid #f9ee75;
+  margin-top: -6px;
   margin-right: -8px; }
 
 .pokemon-id {
+  text-align: center;
+  height: 1.8em;
+  width: 2.5em;
   color: darkgreen;
-  font-size: 15px; }
+  font-size: 15px;
+  background-color: white;
+  margin-top: -2px;
+  margin-right: -13px;
+  padding: 1px;
+  padding-left: 2px;
+  border: 2px solid darkgreen;
+  border-radius: 47%; }
+
+.pokemon-name {
+  text-shadow: 1px 1px 1px white; }
 
 .pokemon-type-id {
   flex-direction: row;
@@ -240,6 +258,10 @@ h1 {
   width: 143px;
   height: 204px;
   margin-right: 90px; }
+
+.card-pok {
+  padding-top: 8px;
+  padding-left: 13px; }
 
 .reverse-card-img {
   max-width: 160px;
