--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,6 +1,6 @@
 @import "./_variables";
 @import "./_layout";
-// @import "./holo-cards";
+//@import "./holo-cards";
 @import "./fonts";
 
 .bg-red-primary {
@@ -57,7 +57,6 @@ h1 {
   text-align: center;
   text-transform: capitalize;
 }
-
 
 .input-field {
   box-sizing: border-box;
@@ -213,6 +212,7 @@ h1 {
   padding: 0;
 }
 
+
 .pokemon-card {
   max-width: 165px;
   padding: 15px 15px 0 15px;
@@ -224,6 +224,8 @@ h1 {
   text-align: center;
   margin: 0 15px;
 }
+
+
 
 .card-back {
   max-width: 165px;
@@ -242,29 +244,48 @@ h1 {
 .imageContainer {
   border-radius: 50%;
   background-color: beige;
+  border: 2px solid #f9ee75
 }
 
 .pokemon-hp {
   color: #c23b1f;
   font-size: 15px;
+  text-shadow: 1px 1px 1px #f9ee75;
 }
 
 .pokemon-hp::before {
-  color: #383838;
+  color: black;
+  text-shadow: 1px 1px 1px #f9ee75;
   font-size: 10px;
   content: "STATS: ";
 }
 
 .pokemon-type {
-  width: 24px;
-  height: 24px;
-  margin-top: -4px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 2px solid #f9ee75;
+  margin-top: -6px;
   margin-right: -8px;
 }
 
 .pokemon-id {
+  text-align: center;
+  height: 1.8em;
+  width: 2.5em;
   color: darkgreen;
   font-size: 15px;
+  background-color: white;
+  margin-top: -2px;
+  margin-right: -13px;
+  padding: 1px;
+  padding-left: 2px;
+  border: 2px solid darkgreen;
+  border-radius: 47%;
+}
+
+.pokemon-name{
+  text-shadow: 1px 1px 1px white;
 }
 
 .pokemon-type-id {
@@ -284,6 +305,11 @@ h1 {
   width: 143px;
   height: 204px;
   margin-right: 90px;
+}
+
+.card-pok{
+  padding-top:8px;
+  padding-left: 13px;
 }
 
 .reverse-card-img {
